--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,52 @@
-body {
+*{
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  padding: 0;
+  box-sizing: border-box;
+}
+body{
+  font-family: 'Roboto', sans-serif;
+  background-color: #f1f1f1;
+  /* position: relative; */
+  padding-bottom: 64px;
+  /* min-height: 100vh; */
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+.nav{
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  box-shadow: 0 2px 4px 0 rgba(0,0,0,.2);
+  padding: auto;
+}
+/* .nav-items{
+  list-style-type: none;
+  display: flex;
+ 
+  
+}
+
+.nav-items > li{
+  padding: 10px;
+}
+ */
+.nav-logo{
+  width : 60px;
+}
+
+.footer{
+  background-color: #333;
+  text-align: center;
+  color: #fff;
+  padding: 15px;
+  /* position: absolute; */
+  bottom: 0;
+  width: 100%;
+  position: fixed;
+  z-index: 1;
+
+}
+
+.main {
+margin: 15px;
+padding: auto;
 }
